--- a/db/package.json
+++ b/db/package.json
@@ -14,6 +14,8 @@
     "envalid": "^6.0.1",
     "express": "^4.17.1",
     "graphile-build-pg": "^4.5.3",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.2.2",
     "knex": "^0.20.13",
     "pg": "^8.0.0",
     "postgraphile": "^4.6.0",
