--- a/db/package.json
+++ b/db/package.json
@@ -7,15 +7,18 @@
   "scripts": {
     "db:new": "knex --knexfile src/knexfile.ts -x ts migrate:make",
     "start": "nodemon",
-    "build": "rm -rf build && tsc && cp -r node_modules build/node_modules"
+    "build": "rm -rf build && tsc && cp -r node_modules build/node_modules && cp package.json build/package.json"
   },
   "dependencies": {
+    "auth0": "^2.24.0",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "graphile-build-pg": "^4.5.3",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.2",
+    "jwks-rsa": "^1.7.0",
     "knex": "^0.20.13",
     "pg": "^8.0.0",
     "postgraphile": "^4.6.0",
