--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "module": "commonjs",
+    "module": "esnext",
     "strict": false,
     "target": "es6",
     "outDir": "build",
@@ -13,8 +13,16 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "types": ["node"],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/*.ts", "./src/**/*.ts"],
   "exclude": ["./src/public/", "./src/**/*.js"]
 }
