--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,5 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["./src/*.ts", "./src/**/*.ts"],
-  "exclude": ["./src/public/", "./src/**/*.js"]
+  "include": ["./src/pages/*.*", "./src/pages/**/*.*"]
 }
