--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: cd yarn install
-            - run: cd yarn build
+            - run: yarn install
+            - run: yarn build
 workflows:
   build-and-test:
     jobs:
