--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,17 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  docker: circleci/docker@1.0.1
+
 jobs:
+  docker:
+    executor: docker/machine
+    steps:
+      - checkout
+      - docker/check
+      - docker/build:
+        image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+
   build-and-test:
     executor:
       name: node/default
@@ -15,3 +25,4 @@ workflows:
   build-and-test:
     jobs:
       - build-and-test
+      - docker
