--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,13 @@ orbs:
   docker: circleci/docker@1.0.1
 
 jobs:
+  build-docker-image:
+    executor: docker/machine
+    steps:
+      - checkout
+      - docker/check
+      - docker/build:
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
   docker-build-tools:
     executor:
       name: docker/docker
@@ -26,3 +33,7 @@ workflows:
     jobs:
       - build-and-test
       - docker-build-tools
+      - build-docker-image:
+        requires:
+          - build-and-test
+          - docker-build-tools
