--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,6 @@ workflows:
       - build-and-test
       - docker-build-tools
       - build-docker-image:
-        requires:
-          - build-and-test
-          - docker-build-tools
+          - requires:
+              - build-and-test
+              - docker-build-tools
