--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,22 +11,19 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: Install npm wee
+          name: Install dependencies
           command: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run:
-          name: Build
-          command: 'yarn build'
   test:
-    executor: node/default
+    executor: docker/machine
     steps:
       - checkout
       - run:
           name: Build
-          command: 'yarn build'
+          command: 'docker build -t ecoach .'
 
 workflows:
   build_and_test:
