--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-npm-deps-{{ checksum "yarn-lock.json" }}
+            - v1-npm-deps-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
           command: yarn install
       - save_cache:
-          key: v1-npm-deps-{{ checksum "yarn-lock.json" }}
+          key: v1-npm-deps-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
       - run:
