--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,13 @@ workflows:
   build_and_test:
     jobs:
       - build_app
+      - test:
+          requires:
+            - build_app
       - build_docker:
           requires:
             - build_app
+            - test
           filters:
             branches:
               only: master
