--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,22 +35,27 @@ jobs:
           name: Test
           command: 'yarn test'
   build_docker:
-    description: 'Build docker image'
+    description: 'Build and deploy to Heroku'
     executor: docker/machine
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-npm-deps-{{ checksum "yarn.lock" }}
-      - deploy-to-heroku/install_dependencies
       - run:
-          name: 'Heroku login'
-          command: >
+          name: 'Install Heroku CLI'
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              heroku update
+              echo "Heroku is already installed. No operation was performed."
+            fi
+      - run:
+          name: 'Heroku login and deploy'
+          command: |
             docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY
             registry.heroku.com
-      - run:
-          name: Deploy Heroku Docker Container
-          command: |
             heroku container:push web -a e-coach-staging
             heroku container:release web -a e-coach-staging
 workflows:
