--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             if [[ $(command -v heroku) == "" ]]; then
               curl https://cli-assets.heroku.com/install.sh | sh
             else
-              heroku update
+              sudo apt update && sudo apt install heroku
               echo "Heroku is already installed. No operation was performed."
             fi
       - run:
