--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test": "exit 0"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.11.0",
+    "@material-ui/core": "^4.9.9",
     "auth0": "^2.24.0",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
@@ -35,6 +37,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^3.8.3",
+    "use-auth0-hooks": "^0.7.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
