--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "printWidth": 120,
+  "printWidth": 100,
   "trailingComma": "es5",
   "singleQuote": true,
-  "semi": false
+  "semi": false,
+  "arrowParens": "avoid"
 }
