--- a/package.json
+++ b/package.json
@@ -1,57 +1,72 @@
 {
   "name": "ecoach",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
   "author": "James Brooks <james@brookode.uk>",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "build:next": "next build",
-    "build:server": "tsc --project tsconfig.server.json",
-    "build": "rm -rf build && rm -rf .next && yarn build:next && yarn build:server",
-    "db:down": "knex --knexfile src/knexfile.ts migrate:down",
+    "build": "react-scripts build && tsc -p tsconfig.app.json",
     "db:new": "knex --knexfile src/knexfile.ts -x ts migrate:make",
-    "dev": "concurrently \"next dev\" \"nodemon\"",
+    "dev": "nf start -j Procfile.dev",
+    "start:app": "react-scripts start",
+    "start:server": "nodemon",
+    "start": "yarn build && nodemon",
+    "test": "react-scripts test",
     "heroku:deploy": "heroku container:release web -a e-coach-staging",
-    "heroku:push": "heroku container:push web -a e-coach-staging",
-    "start": "NODE_ENV=production node build/index.js",
-    "test": "exit 0"
+    "heroku:push": "heroku container:push web -a e-coach-staging"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^0.11.0",
-    "@material-ui/core": "^4.9.9",
     "auth0": "^2.24.0",
-    "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
+    "express-http-to-https": "^1.1.4",
+    "foreman": "^3.0.1",
     "graphile-build-pg": "^4.5.3",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.2",
+    "helmet": "^3.22.0",
     "jwks-rsa": "^1.7.0",
     "knex": "^0.20.13",
-    "next": "^9.3.4",
+    "morgan": "^1.10.0",
     "pg": "^8.0.0",
     "postgraphile": "^4.6.0",
     "postgraphile-plugin-connection-filter": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.8.3",
-    "use-auth0-hooks": "^0.7.0",
+    "react-scripts": "3.4.1",
+    "ts-node": "^8.8.2",
+    "typescript": "~3.7.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/node": "^13.11.0",
-    "@types/react": "^16.9.32",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.0.2",
-    "ts-node": "^8.8.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/auth0": "^2.20.2",
+    "@types/express": "^4.17.4",
+    "@types/helmet": "^0.0.45",
+    "@types/jest": "^24.0.0",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^12.0.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react": "^16.9.0",
+    "nodemon": "^2.0.2"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "proxy": "http://localhost:5000",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
