--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
     "heroku:push": "heroku container:push web -a e-coach-staging"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.5.0",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/pickers": "^3.2.10",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "auth0": "^2.24.0",
+    "auth0-js": "^9.13.1",
+    "date-fns": "^2.11.1",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
@@ -25,15 +34,20 @@
     "graphile-build-pg": "^4.5.3",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.2",
+    "graphql-tag": "^2.10.3",
     "helmet": "^3.22.0",
+    "history": "^4.10.1",
     "jwks-rsa": "^1.7.0",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
+    "notistack": "^0.9.9",
     "pg": "^8.0.0",
     "postgraphile": "^4.6.0",
     "postgraphile-plugin-connection-filter": "^1.1.3",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.4",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "ts-node": "^8.8.2",
     "typescript": "~3.7.2",
@@ -44,13 +58,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/auth0": "^2.20.2",
+    "@types/auth0-js": "^9.12.4",
     "@types/express": "^4.17.4",
     "@types/helmet": "^0.0.45",
+    "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^12.0.0",
-    "@types/react-dom": "^16.9.0",
     "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "nodemon": "^2.0.2"
   },
   "eslintConfig": {
