--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,16 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
   docker: circleci/docker@1.0.1
+  heroku: circleci/heroku@1.0.1
 
 jobs:
-  build_app:
+  deploy:
+    executor: heroku/default
+    steps:
+      - checkout
+      - heroku/install
+      - heroku/deploy-via-git
+  build:
     description: 'Run build'
     executor: node/default
     steps:
@@ -33,44 +40,63 @@ jobs:
       - run:
           name: Test
           command: 'yarn test'
-  build_docker:
-    description: 'Build and deploy to Heroku'
-    executor: docker/machine
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-npm-deps-{{ checksum "yarn.lock" }}
-      - run:
-          name: 'Install Heroku CLI'
-          command: |
-            if [[ $(command -v heroku) == "" ]]; then
-              curl https://cli-assets.heroku.com/install.sh | sh
-            else
-              sudo apt update && sudo apt install heroku
-              echo "Heroku is already installed. No operation was performed."
-            fi
-      - run:
-          name: 'Heroku login'
-          command: >
-            docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY
-            registry.heroku.com
-      - run:
-          name: 'Deploy to Heroku'
-          command: |
-            heroku container:push web -a e-coach-staging
-            heroku container:release web -a e-coach-staging
+  # push_heroku:
+  #   description: 'Push to Heroku'
+  #   executor: node/default
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: 'Install Heroku CLI'
+  #         command: |
+  #           if [[ $(command -v heroku) == "" ]]; then
+  #             curl https://cli-assets.heroku.com/install.sh | sh
+  #           else
+  #             sudo apt update && sudo apt install heroku
+  #             echo "Heroku is already installed. No operation was performed."
+  #           fi
+  #     - run:
+  #         name: 'Push to Heroku'
+  #         command: |
+  #           git remote add heroku https://git.heroku.com/e-coach-staging.git
+  #           git push heroku master --force
+  # build_docker:
+  #   description: 'Build and deploy to Heroku'
+  #   executor: docker/machine
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys:
+  #           - v1-npm-deps-{{ checksum "yarn.lock" }}
+  #     - run:
+  #         name: 'Install Heroku CLI'
+  #         command: |
+  #           if [[ $(command -v heroku) == "" ]]; then
+  #             curl https://cli-assets.heroku.com/install.sh | sh
+  #           else
+  #             sudo apt update && sudo apt install heroku
+  #             echo "Heroku is already installed. No operation was performed."
+  #           fi
+  #     - run:
+  #         name: 'Heroku login'
+  #         command: >
+  #           docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY
+  #           registry.heroku.com
+  #     - run:
+  #         name: 'Deploy to Heroku'
+  #         command: |
+  #           heroku container:push web -a e-coach-staging
+  #           heroku container:release web -a e-coach-staging
 workflows:
   build_and_test:
     jobs:
-      - build_app
+      - build
       - test:
           requires:
-            - build_app
-      - build_docker:
+            - build
+      - deploy:
           requires:
             - test
-            - build_app
+            - build
           filters:
             branches:
               only: master
