--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@date-io/date-fns": "^2.5.0",
     "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.2.10",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-persist": "^0.1.1",
@@ -30,6 +32,7 @@
     "envalid": "^6.0.1",
     "express": "^4.17.1",
     "express-http-to-https": "^1.1.4",
+    "final-form": "^4.19.1",
     "foreman": "^3.0.1",
     "graphile-build-pg": "^4.5.3",
     "graphql-middleware": "^4.0.2",
@@ -39,7 +42,9 @@
     "history": "^4.10.1",
     "jwks-rsa": "^1.7.0",
     "knex": "^0.20.13",
+    "material-table": "^1.57.2",
     "morgan": "^1.10.0",
+    "mui-rff": "^2.1.8",
     "notistack": "^0.9.9",
     "pg": "^8.0.0",
     "postgraphile": "^4.6.0",
@@ -47,9 +52,11 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "ts-node": "^8.8.2",
+    "typeface-roboto": "^0.0.75",
     "typescript": "~3.7.2",
     "winston": "^3.2.1"
   },
