--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,6 @@ jobs:
       - run:
           name: Build
           command: 'yarn build'
-      - save_cache:
-          key: v1-repo-{{ .Branch }}-{{ .Revision }}
   test:
     description: 'Test app'
     executor: node/default
@@ -43,18 +41,6 @@ jobs:
       - run:
           name: Test
           command: 'yarn test'
-  bdd:
-    description: 'Run BDD'
-    executor: node/default
-    steps:
-      - checkout
-      - restore_cache:
-        keys:
-          - v1-repo-{{ .Branch }}-{{ .Revision }}
-      - run:
-          name: BDD
-          command: 'yarn bdd'
-
 workflows:
   build_and_test:
     jobs:
@@ -65,6 +51,7 @@ workflows:
       - deploy:
           requires:
             - test
+            - build
           filters:
             branches:
               only: master
