--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/auth0": "^2.20.2",
     "@types/auth0-js": "^9.12.4",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.4",
     "@types/helmet": "^0.0.45",
     "@types/history": "^4.7.5",
@@ -75,6 +76,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "nodemon": "^2.0.2"
   },
   "eslintConfig": {
