--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "react-scripts build && tsc -p tsconfig.app.json",
-    "db:new": "knex --knexfile src/knexfile.ts -x ts migrate:make",
+    "db:new": "knex --knexfile src/knexfile.js -x ts migrate:make",
     "dev": "nf start -j Procfile.dev",
     "start:app": "react-scripts start",
     "start:server": "nodemon",
@@ -16,7 +16,7 @@
     "heroku:push": "heroku container:push web -a e-coach-staging"
   },
   "dependencies": {
-    "@date-io/date-fns": "^2.5.0",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
@@ -27,7 +27,7 @@
     "apollo-link-http": "^1.5.16",
     "auth0": "^2.24.0",
     "auth0-js": "^9.13.1",
-    "date-fns": "^2.11.1",
+    "date-fns": "2.11.1",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
@@ -66,6 +66,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/auth0": "^2.20.2",
     "@types/auth0-js": "^9.12.4",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.4",
     "@types/helmet": "^0.0.45",
     "@types/history": "^4.7.5",
@@ -75,6 +76,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "nodemon": "^2.0.2"
   },
   "eslintConfig": {
