--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "auth0-js": "^9.13.1",
     "date-fns": "2.11.1",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.5",
+    "draftjs-to-html": "^0.9.1",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
     "express-http-to-https": "^1.1.4",
@@ -53,9 +55,11 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-final-form": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "textversionjs": "^1.1.3",
     "ts-node": "^8.8.2",
     "typeface-roboto": "^0.0.75",
     "typescript": "~3.7.2",
@@ -68,6 +72,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/auth0": "^2.20.2",
     "@types/auth0-js": "^9.12.4",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.4",
     "@types/helmet": "^0.0.45",
@@ -78,7 +83,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/textversionjs": "^1.1.0",
     "@types/yup": "^0.26.34",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
