--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
+    "ejs": "^3.0.2",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
     "express-http-to-https": "^1.1.4",
@@ -73,6 +74,7 @@
     "@types/auth0": "^2.20.2",
     "@types/auth0-js": "^9.12.4",
     "@types/draftjs-to-html": "^0.8.0",
+    "@types/ejs": "^3.0.2",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.4",
     "@types/helmet": "^0.0.45",
